--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -763,3 +763,16 @@
   pages={194--205},
   year={1991}
 }
+@article{tu2017deep,
+	title={Deep convolutional neural network architecture with reconfigurable computation patterns},
+	author={Tu, Fengbin and Yin, Shouyi and Ouyang, Peng and Tang, Shibin and Liu, Leibo and Wei, Shaojun},
+	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+	year={2017},
+	publisher={IEEE}
+}
+@INPROCEEDINGS{6237004,
+	author={K. T. {Malladi} and F. A. {Nothaft} and K. {Periyathambi} and B. C. {Lee} and C. {Kozyrakis} and M. {Horowitz}},
+	booktitle={ISCA}, 
+	title={Towards energy-proportional datacenter memory with mobile DRAM}, 
+	year={2012},
+}
